create category api: fake data, crud api, swagger
