# mobile_shop_api/app/Http/Resources/CategoryDetailResource.php
@@ -1,0 +1,25 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class CategoryDetailResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return array
+     */
+    public function toArray($request)
+    {
+        return [
+            'id'        => $this->id,
+            'name'      => $this->name,
+            'sort_no'   => $this->sort_no,
+            'home'      => $this->home,
+            'image'     => $this->image,
+        ];
+    }
+}
