# mobile_shop_api/routes/api.php
@@ -5,6 +5,7 @@ use App\Http\Controllers\Auth\RegisterController;
 use App\Http\Controllers\Auth\PasswordController;
 use App\Http\Controllers\Auth\UserController;
 use App\Http\Controllers\Auth\VerificationController;
+use App\Http\Controllers\CategoryController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -36,3 +37,5 @@ Route::group(['middleware' => 'auth:sanctum'], function () {
 
     Route::patch('password/change', [PasswordController::class, 'change']);
 });
+
+Route::apiResource('categories', CategoryController::class);
